<resources>
    <string name="app_name">Trash Mapper</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_message">Trash Collector!</string>
    <string name="log_in">Log In</string>
    <string name="create">Register</string>
    <string name="finishRegister">Log in to my account</string>
    <string name="title_activity_user_information">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_maps">Map</string>
    <string name="type_of_trash">Type of Trash</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--Map Interface Drawerlayout -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="mapit">Map It</string>
    <string name="like">Like It!</string>
    <string name= "dislike">Dislike It!</string>

    <!--     Selection Screen     -->
    <string name="mapBins">Map Bins</string>
    <string name="mapTrash">Map Trash</string>
    <string name="map">See Map</string>
    <string name="instruction">What would you like to do?\nHere you can decide to map a trash bin that is not on the map, map some trash that is not on the map, or you can just view the map.</string>

    <!--        Bin Mapper        -->
    <string name="recycling">Recycling</string>
    <string name="waste">Waste</string>
    <string name="compost">Compost</string>
    <string name="description">Optional: Provide a short description of the bin\'s location.</string>
</resources>
