<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_green_dark"
    tools:context="edu.umn.trashmapper.SelectActivity">

    <TextView
        android:text="@string/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/mapBins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapBins"
            android:layout_weight="1" />

        <Button
            android:text="@string/mapTrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapTrash"
            android:layout_weight="1" />

        <Button
            android:text="@string/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
